Template (bugfix): if the navigation item is too long there was a line break. changed css so it does not enter a line break
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@26704 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/themes/standard_3_1/layout.css
+++ b/themes/standard_3_1/layout.css
@@ -291,6 +291,7 @@ header.login .right label.remember_me {
     font-size: 14px;
     font-weight: normal;
     background: none;
+    white-space: pre;
 }
 
 #content-wrapper {
